Testing background-color change to fix Contrast issues

--- a/style.css
+++ b/style.css
@@ -260,7 +260,7 @@ form > button {
   left: 0;
   top: 421px;
   border-radius: 0;
-  background-color: #4A4A4A;
+  background-color: #191735;
   /*background-color: #7d73fc;*/
   margin-top: 24px;
   margin-left: 24px;
@@ -276,7 +276,6 @@ form > button {
   line-height: 24px;
   letter-spacing: 0.03em;
   text-align: center;
-  background-color: #000000;
   color: #FFFFFF;
   /*color: #edecff;*/
 }
